inserção dos comandos baselinbe

--- a/flexbox-main/index.html
+++ b/flexbox-main/index.html
@@ -123,4 +123,12 @@
     </main>
     
 
+    <h2 class="valor-da-propriedade">stretch</h2>
+    <main class="container-alignitems-baseline">
+        <div class="bloco-1-baseline"> 1 </div>
+        <div class="bloco-2-baseline"> 2 </div>
+        <div class="bloco-3-baseline"> 3 </div>
+    </main>
+    
+
 </html>
