--- a/flexbox-main/index.html
+++ b/flexbox-main/index.html
@@ -130,5 +130,39 @@
         <div class="bloco-3-baseline"> 3 </div>
     </main>
     
+    <h1 class="nome-da-propriedade">5- flex-wrap:serve para decidir se os elementos irão para a linha de baixo quando chegar ao final do container ou se ficarão espremidos.</h1>
+    </h1>
+    <h2 class="valor-da-propriedade">nowrap</h2>
+    <main class="container-flexnowrap">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+        <div class="bloco-1"> 4 </div>
+        <div class="bloco-2"> 5 </div>
+        <div class="bloco-3"> 6 </div>
+        <div class="bloco-1"> 7 </div>
+        <div class="bloco-2"> 8 </div>
+        <div class="bloco-3"> 9 </div>
+        <div class="bloco-1"> 10 </div>
+        <div class="bloco-2"> 11 </div>
+        <div class="bloco-3"> 12 </div>
+        </main>
+
+        <h2 class="valor-da-propriedade">wrap</h2>
+    <main class="container-flexwrap">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+        <div class="bloco-1"> 4 </div>
+        <div class="bloco-2"> 5 </div>
+        <div class="bloco-3"> 6 </div>
+        <div class="bloco-1"> 7 </div>
+        <div class="bloco-2"> 8 </div>
+        <div class="bloco-3"> 9 </div>
+        <div class="bloco-1"> 10 </div>
+        <div class="bloco-2"> 11 </div>
+        <div class="bloco-3"> 12 </div>
+    </main>
+    
 
 </html>
