inserção bloco flexwrap-reverse

--- a/flexbox-main/index.html
+++ b/flexbox-main/index.html
@@ -164,5 +164,20 @@
         <div class="bloco-3"> 12 </div>
     </main>
     
+    <h2 class="valor-da-propriedade">wrap-reverse</h2>
+    <main class="container-flexwrap-reverse">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+        <div class="bloco-1"> 4 </div>
+        <div class="bloco-2"> 5 </div>
+        <div class="bloco-3"> 6 </div>
+        <div class="bloco-1"> 7 </div>
+        <div class="bloco-2"> 8 </div>
+        <div class="bloco-3"> 9 </div>
+        <div class="bloco-1"> 10 </div>
+        <div class="bloco-2"> 11 </div>
+        <div class="bloco-3"> 12 </div>
+    </main>
 
 </html>
