--- a/flexbox-main/index.html
+++ b/flexbox-main/index.html
@@ -180,4 +180,23 @@
         <div class="bloco-3"> 12 </div>
     </main>
 
+    <h1 class="nome-da-propriedade-shorthand">6-flax-flow atalho para as propriedades flex-direction e flex-wrap .</h1>
+    <!-- esse é só um exemplo de uma das possibilidades combinnações do flex-direction com flex-wrap-->
+</h1>
+<h2 class="valor-da-propriedade">rownowrap</h2>
+<main class="container-flexflow-row-nowrap">
+    <div class="bloco-1"> 1 </div>
+    <div class="bloco-2"> 2 </div>
+    <div class="bloco-3"> 3 </div>
+    <div class="bloco-1"> 4 </div>
+    <div class="bloco-2"> 5 </div>
+    <div class="bloco-3"> 6 </div>
+    <div class="bloco-1"> 7 </div>
+    <div class="bloco-2"> 8 </div>
+    <div class="bloco-3"> 9 </div>
+    <div class="bloco-1"> 10 </div>
+    <div class="bloco-2"> 11 </div>
+    <div class="bloco-3"> 12 </div>
+    </main>
+
 </html>
