--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <div class="bloco-3"> 12 </div>
     </main>
 
-    <h1 class="nome-da-propriedade" id="align-content">7-</h1>align-content:usado para quando ha flex-wrap e queremos alinhar as linhas no eixo perpendicular</h1>
+    <h1 class="nome-da-propriedade" id="align-content">7-align-content:usado para quando ha flex-wrap e queremos alinhar as linhas no eixo perpendicular.</h1>
     
 </h1>
 <h2 class="valor-da-propriedade">center</h2>
